examples/test/testpolicy14027.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14027
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key41: value8
      key42: value43
      key47: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value4
          key19: value23
          key30: value45
      podSelector:
        matchLabels:
          key35: value42
          key41: value15
          key40: value47
